src/test/deca/syntax/valid/SansObjet/IneqExpr4-Single.deca
// Description:
//    Lower than expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 09/01/2022

{
        x < 3;
}
