src/test/deca/syntax/invalid/SansObjet/IneqExpr2-MissingOperand2.deca
// Description:
//    Lower or equal expression with missing right operand.
//
// Results:
//    12:11 mismatched input '>' expecting {FLOAT, INT, '(', '-', '!', 'false',
//    'null', 'readInt', 'readFloat', 'true', IDENT, STRING, NEW, THIS}
//
// Historique:
//    cree le 09/01/2022

{
        x =>;
}
